workload/services/media-server/resources/media-filebrowser/deployment-media-filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: filebrowser-quantum
    app.kubernetes.io/name: filebrowser-quantum
  name: media-filebrowser
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: filebrowser-quantum
      app.kubernetes.io/name: filebrowser-quantum
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: filebrowser-quantum
        app.kubernetes.io/name: filebrowser-quantum
    spec:
      containers:
      - name: filebrowser-quantum
        image: ghcr.io/gtsteffaniak/filebrowser:stable
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 80
          protocol: TCP
        # https://github.com/gtsteffaniak/filebrowser/wiki/Environment-Variables
        volumeMounts:
        - name: data
          mountPath: "/data"
        - name: config
          mountPath: "/data/config.yaml"
          readOnly: true
          subPath: config.yaml
        - name: srv
          mountPath: "/srv"
        - name: tmp
          mountPath: /tmp
      restartPolicy: Always
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: data
        emptyDir: {}
      - name: config
        configMap:
          name: media-filebrowser-config
      - name: srv
        persistentVolumeClaim:
          claimName: media-server
      - name: tmp
        emptyDir: {}
